Finally, fixed sucessfully the bug that the dropdown is not above the slide show by add z-index to nagivation-bar

--- a/home/home.css
+++ b/home/home.css
@@ -16,6 +16,7 @@ body {
    margin: 0px;
    padding: 0px;
    align-items: center;
+   z-index: 10;
    
    list-style: none;
 
@@ -58,7 +59,7 @@ body {
 .dropdown {
    position: relative;
    display: inline-block;   
-   z-index: 10;
+   z-index: 20;
 }
 .dropdown ul {
    display: none;   
@@ -100,19 +101,17 @@ body {
    height: 500px;
    margin: auto;
    overflow: hidden;
-   z-index: -1;
+   z-index: 0;
 }
 .slider-container .slider-content {
    /* position: absolute; */
    height: 100%;
    overflow: hidden;
-   z-index: 1;
 }
 .slider-container .slider-content img {
    width: 100%;
    height: 100%;
    object-fit: cover;
-   z-index: 1;
 }
 .slider-container .slider-buttons {
    position: absolute;
@@ -120,7 +119,7 @@ body {
    display: flex;
    justify-content: space-between;
    width: 100%;
-   z-index: 3;
+   z-index: 1;
 }
 .slider-container .slider-buttons button {
    display: block;
